feat: support generic ingredient servings
